Closed
Bug 192291
Opened 22 years ago
Closed 22 years ago
[FIXr]Not reflowing when inside position:fixed element
Categories
(Core :: Layout: Positioned, defect, P1)
Core
Layout: Positioned
Tracking
()
VERIFIED
FIXED
mozilla1.3final
People
(Reporter: bugzilla-mozilla-20000923, Assigned: bzbarsky)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
385 bytes,
text/html
|
Details | |
|
2.64 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
asa
:
approval1.3+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3b) Gecko/20030202 Phoenix/0.5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3b) Gecko/20030202 Phoenix/0.5
Changing style.display for an element within a postion:fixed doesn't seem to
work initially.
Reproducible: Always
Steps to Reproduce:
1. Go to http://www.warwickcompsoc.co.uk/?usetheme=v2-compact
2. Hover mouse over left edge (to see menu).
3. Click an expandable menu item (e.g. 'About').
Actual Results:
Nothing happens.
Expected Results:
The menu should expand to show what's under that area of the site.
This *does* work in Mozilla build 20030114, but not in build 20030122.
| Assignee | ||
Comment 1•22 years ago
|
||
This works in Linux build 2003-01-19-22 and is broken in 2003-01-20-21
Chances are, this is fallout from bug 179683.
A minimal testcase would sure be nice here... :(
| Assignee | ||
Comment 2•22 years ago
|
||
The key is the div around the thing whose display we change.
| Assignee | ||
Comment 3•22 years ago
|
||
This looks like a carryover from when the "we only do dirty frames" assert and
such were still there....
| Assignee | ||
Comment 4•22 years ago
|
||
Comment on attachment 113876 [details] [diff] [review]
This hack didn't get fully removed
dbaron, would you review?
Attachment #113876 -
Flags: superreview?(dbaron)
Attachment #113876 -
Flags: review?(dbaron)
| Assignee | ||
Comment 5•22 years ago
|
||
to me
Assignee: position → bzbarsky
Keywords: qawanted
Priority: -- → P1
Summary: Not reflowing when inside position:fixed element → [FIX]Not reflowing when inside position:fixed element
Target Milestone: --- → mozilla1.3final
Comment on attachment 113876 [details] [diff] [review]
This hack didn't get fully removed
Makes sense to me, although I don't see the line in the old code where this
came from.
Attachment #113876 -
Flags: superreview?(dbaron)
Attachment #113876 -
Flags: superreview+
Attachment #113876 -
Flags: review?(dbaron)
Attachment #113876 -
Flags: review+
| Assignee | ||
Comment 7•22 years ago
|
||
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/html/base/src/nsViewportFrame.cpp&rev=1.59&mark=468#459
is where it came from...
Summary: [FIX]Not reflowing when inside position:fixed element → [FIXr]Not reflowing when inside position:fixed element
| Assignee | ||
Comment 8•22 years ago
|
||
Comment on attachment 113876 [details] [diff] [review]
This hack didn't get fully removed
Could this be approved for 1.3? We're just changing the reflow reason for no
good reason here, and it breaks things...
Attachment #113876 -
Flags: approval1.3?
Comment 9•22 years ago
|
||
Comment on attachment 113876 [details] [diff] [review]
This hack didn't get fully removed
a=asa (on behalf of drivers) for checkin to 1.3 final.
Attachment #113876 -
Flags: approval1.3? → approval1.3+
| Assignee | ||
Comment 10•22 years ago
|
||
fixed for 1.3final
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•22 years ago
|
||
*** Bug 193135 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•