Remove leftover reflow reason hack in fixed-pos reflow.  Bug 192291, r+sr=dbaron, a=asa