layout/html/base/src/nsAbsoluteContainingBlock.cpp
@@ -404,10 +404,6 @@ nsAbsoluteContainingBlock::DestroyFrames(nsIFrame*       aDelegatingFrame,
   mAbsoluteFrames.DestroyFrames(aPresContext);
 }
 
-/**
- * NOTE: nsViewportFrame::ReflowFixedFrame is rather similar to this
- * function, so changes made here may also need to be made there.
- */
 // XXX Optimize the case where it's a resize reflow and the absolutely
 // positioned child has the exact same size and position and skip the
 // reflow...
